--- a/frontend/src/view/annotator/annotator.module.scss
+++ b/frontend/src/view/annotator/annotator.module.scss
@@ -2,12 +2,7 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
-  height: 100vh;
   overflow: auto;
-
-  &.disableScroll {
-    overflow: hidden !important;
-  }
 
   .info {
     display: grid;
